--- a/test/FileSystem.html
+++ b/test/FileSystem.html
@@ -12,10 +12,7 @@
     <audio controls id='audio'></audio>
 
 
-    <script src="utils.js"></script>
-    <script src="IDBProvider.js"></script>
-    <script src="FSProvider.js"></script>
-    <script src="FileSystem.js"></script>
+    <script src="FileSystem.js"></script> 
 
     <script>
         file.addEventListener('change', async function (ev) {
@@ -26,7 +23,7 @@
 
                 reader.onload = async function (ev) {
 
-                    var blob = await IDBProvider.getInstance().then(fs => fs.writeToFile('music/txt.txt', ev.target.result))
+                    var blob = await FileSystem.getInstance().then(fs => fs.writeToFile('music/txt.txt', ev.target.result))
                     audio.src = window.URL.createObjectURL(blob)
                     audio.play()
 
