--- a/demo/fs.html
+++ b/demo/fs.html
@@ -22,7 +22,7 @@
                     <li><a href="javascript:void(0)">root</a></li>
                 </ul>
             </div>
-            <div class="files" draggable="true">
+            <div class="files">
 
             </div>
 
@@ -31,14 +31,7 @@
     </div>
 
     <!-- 右键菜单 -->
-    <div id="right-menu" style="display:none;position:absolute">
-        <ul>
-            <li><a href="javascript:void(0)" data-cmd='createFoler'>新建文件夹</a></li>
-            <li><a href="javascript:void(0)" data-cmd='createFile'>新建文件</a></li>
-            <li><a href="javascript:void(0)" data-cmd='delete'>删除</a></li>
-            <li><a href="javascript:void(0)" data-cmd='preview'>预览</a></li>
-            <li><a href="javascript:void(0)" data-cmd='download'>下载</a></li>
-        </ul>
+    <div id="right-menu" style="display:none;position:absolute">        
     </div>
     <script src="FileSystem.js"></script>
     <script src="js/app.js"></script>
