修改生成逻辑

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,12 +16,12 @@
   <script src="../dist/FileSystem.js"></script>
   <script>
     mocha.setup({
-      ui: 'tdd'
+      ui: 'tdd',
     });
   </script>
 
- 
- <script src="FileSystem.js"></script>
+
+  <script src="FileSystem.js"></script>
 
   <script>
     mocha.checkLeaks();
